WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113141
GIFImageReader should reports parsing error to client
https://bugs.webkit.org/show_bug.cgi?id=113141
Summary
GIFImageReader should reports parsing error to client
Hin-Chung Lam
Reported
2013-03-23 17:26:23 PDT
GIFImageReader hides parsing error and don't report to GIFImageDecoder. This was done to match older implementation. We shouldn't tighten up the tolerance and get rid of this complexity.
Attachments
Patch
(2.07 KB, patch)
2013-03-23 17:34 PDT
,
Hin-Chung Lam
no flags
Details
Formatted Diff
Diff
Patch
(4.09 KB, patch)
2013-03-23 17:50 PDT
,
Hin-Chung Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hin-Chung Lam
Comment 1
2013-03-23 17:34:47 PDT
Created
attachment 194722
[details]
Patch
Hin-Chung Lam
Comment 2
2013-03-23 17:50:24 PDT
Created
attachment 194723
[details]
Patch
Hin-Chung Lam
Comment 3
2013-03-23 18:52:57 PDT
(In reply to
comment #0
)
> GIFImageReader hides parsing error and don't report to GIFImageDecoder. This was done to match older implementation. We shouldn't tighten up the tolerance and get rid of this complexity.
s/shouldn\'t/should/
Stephen White
Comment 4
2013-03-24 07:45:13 PDT
Comment on
attachment 194723
[details]
Patch Okie doke. r=me
WebKit Review Bot
Comment 5
2013-03-24 17:38:40 PDT
Comment on
attachment 194723
[details]
Patch Clearing flags on attachment: 194723 Committed
r146737
: <
http://trac.webkit.org/changeset/146737
>
WebKit Review Bot
Comment 6
2013-03-24 17:38:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug