GIFImageReader should reports parsing error to client https://bugs.webkit.org/show_bug.cgi?id=113141

Reviewed by Stephen White.

Source/WebCore:

GIFImageReader nows reports parsing error to client (GIFImageDecoder) such that errors can be handled.
In the case of corrupted GIF images GIFImageReader will be deleted and decoding will fail.

Unit test is updated to reflect change in behavior.
Tested with a local corpus which showed better handling of corrupted GIF images.

* platform/image-decoders/gif/GIFImageReader.cpp:
(GIFImageReader::decode):

Source/WebKit/chromium:

Updated unit test that runs on a broken GIF image file, decoding should fail.

* tests/GIFImageDecoderTest.cpp:
(WebKit::TEST):


Canonical link: https://commits.webkit.org/131503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146737 268f45cc-cd09-0410-ab3c-d52691b4dbfc